<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_50sdp">
        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">
            <ImageView
                android:id="@+id/iconbacksearchvideo"
                android:src="@drawable/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"/>
            <TextView
                android:id="@+id/tvmusic"
                android:layout_toRightOf="@id/iconbacksearchvideo"
                android:text="@string/music"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imvsearchmusic"
                android:src="@drawable/ic_search_black_24dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/_20sdp"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_50sdp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/llhome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/ic_home"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/home"
                    android:layout_gravity="center"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lltrending"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/ic_trending"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/trending"
                    android:layout_gravity="center"
                    android:textColor="@color/red"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</layout>